--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,348 @@
-/* место для вашего кода */
+
+.header {
+  display: grid;
+  grid-template-columns: 1fr min-content 1fr;
+  align-items: center;
+  max-width: 1052px;
+  margin: 0 auto;
+  border: 1px;
+  padding: 92px 28px 89px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+}
+
+.header__menu {
+  grid-column: 1;
+  justify-self: start;
+  min-width: max-content;
+}
+
+.header__links-list {
+  display: flex;
+  gap: 33px;
+}
+
+.header__links-list-item {
+  list-style-type: circle;
+}
+
+.header__links-list-item_no-bullit {
+  list-style-type: none;
+}
+
+.header__link {
+  text-decoration: none;
+  white-space: nowrap;
+}
+
+.header__link_active {
+  text-decoration: underline;
+  text-underline-offset: 4px;
+}
+
+.header__logo {
+  grid-column: 2;
+  width: 140px;
+}
+
+.header__logo-image {
+  width: 100%;
+}
+
+.address {
+  display: flex;
+  flex-direction: column;
+  grid-column: 3;
+  font-weight: 400;
+  font-size: 18px;
+  font-style: inherit;
+  line-height: 1.35;
+}
+
+.header__address {
+  justify-self: end;
+  font-style: inherit;
+}
+
+.header__address-link {
+  text-decoration-line: underline;
+  text-underline-offset: 4px;
+}
+
+.header__address-text {
+  font-size: 18px;
+  line-height: 1.35;
+}
+
+.cover {
+  position: relative;
+  margin-bottom: 175px;
+  padding: 165px 50px 50px;
+  background-image: url(../images/cover.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+
+}
+
+.overlay {
+  position: absolute;
+  inset: 0;
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 60%;
+  background-color: #000000;
+}
+
+.cover__title {
+  position: relative;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  color: #ffffff;
+  font-size: 100px;
+  line-height: 1.15;
+  letter-spacing: 30px;
+  text-transform: uppercase;
+}
+
+.aligned-text {
+  display: block;
+}
+
+.aligned-text_center {
+  align-items: normal;
+  line-height: 1;
+  text-align: center;
+}
+
+.aligned-text_right {
+  line-height: 1;
+  text-align: right;
+}
+
+.letter-spacing-extended {
+  letter-spacing: 60px;
+}
+
+.no-letter-spacing {
+  letter-spacing: normal;
+}
+
+.cover__description {
+  position: relative;
+  z-index: 2;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 77px;
+  padding: 136px 0 0;
+}
+
+.cover__description-text {
+  color: white;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 1.27;
+  text-transform: uppercase;
+  word-spacing: 18px;
+}
+
+.bet-button {
+  border: 1px solid #FFFFFF;
+  padding: 14px 32px;
+  color: white;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 1;
+  text-transform: uppercase;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.lots {
+  margin: 0 24px 121px;
+}
+
+.lots__heading {
+  padding: 5px 0px 25px 40px;
+  color: #000000;
+  font-size: 40px;
+  line-height: 47px;
+  text-align: left;
+  text-transform: uppercase;
+}
+
+.lots__card-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 25px;
+  list-style-type: none;
+}
+
+.lots__card-list-item {
+  flex-grow: 1;
+  width: 334px;
+  min-height: 563px;
+}
+
+.card-link {
+  display: block;
+  width: 334px;
+  height: 100%;
+  text-decoration: none;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.card__title {
+  z-index: 2;
+  margin: 48px 40px 0;
+  color: #FFFFFF;
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 1.2;
+  text-decoration-line: underline;
+  text-transform: uppercase;
+}
+
+.card__text {
+  z-index: 2;
+  margin: 0 40px 48px;
+  color: #FFFFFF;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 1.2;
+}
+
+.card_type_film {
+  position: relative;
+  justify-content: space-between;
+  background-image: url(../images/card-lot-01.jpg);
+  background-position: center;
+  background-size: 170%;
+}
+
+.card_type_book {
+  position: relative;
+  background-image: url(../images/card-lot-02.jpg);
+  background-position: center;
+  background-size: 120%;
+}
+
+.card_type_picture {
+  position: relative;
+  justify-content: space-between;
+  background-image: url(../images/card-lot-03.jpg);
+  background-position: center;
+  background-size: 150%;
+}
+
+.lots__look-more-link {
+  display: block;
+  margin: 6px 0 0 40px;
+  color: #000000;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 23px;
+  text-decoration: underline;
+}
+
+.about {
+  display: grid;
+  grid-template-columns: 310px 1fr;
+  width: 1052px;
+  margin: 0 24px 178px;
+  padding-left: 50px;
+  
+}
+
+.about__logo {
+  display: flex;
+  justify-content: center;
+  width: 240px;
+  height: 240px;
+  margin: 60px 0px;
+  border-radius: 50%;
+  background-color: black;
+}
+
+.about__logo_image {
+  align-self: center;
+  width: 148px;
+  height: 114px;
+}
+
+.about__title {
+  margin: 160px 0 101px;
+  font-size: 40px;
+  line-height: 47px;
+  text-transform: uppercase;
+}
+
+.about__text {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 120%;
+}
+
+.about__text_not_last_paragraph {
+  margin-bottom: 26px;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 50px 91px;
+}
+
+.footer__menu {
+  box-sizing: border-box;
+}
+
+.footer__menu-list {
+  list-style-type: none;
+}
+
+.footer__menu-list-item {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21px;
+  text-align: center;
+}
+
+.footer__menu-link {
+  text-decoration-line: underline;
+}
+
+.footer__menu-link_active {
+  text-decoration-line: none;
+}
+
+.footer__social-list {
+  display: flex;
+  flex-direction: row;
+  gap: 48px;
+  list-style-type: none;
+}
+
+.footer__social-list-item { 
+  width: 48px;
+  height: 48px;
+}
+
+.footer__social-link {
+  text-decoration: none;
+}
+
+
+.footer__social-icon {
+  width: auto;
+  height: 48px;
+}
