--- a/styles/style.css
+++ b/styles/style.css
@@ -79,10 +79,10 @@
   position: relative;
   margin-bottom: 175px;
   padding: 165px 50px 50px;
-  background-image: url(../images/cover.jpg);
+  background-image: url(../images/cover.jpg); 
   background-repeat: no-repeat;
   background-size: cover;
-
+  background-position: center;
 }
 
 .overlay {
@@ -190,7 +190,7 @@
 
 .card-link {
   display: block;
-  width: 334px;
+  width: 100%; 
   height: 100%;
   text-decoration: none;
 }
@@ -199,6 +199,10 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  position: relative;
+  background-position: center;
+  background-size: cover;
+  justify-content: space-between;
 }
 
 .card__title {
@@ -222,31 +226,20 @@
 }
 
 .card_type_film {
-  position: relative;
-  justify-content: space-between;
   background-image: url(../images/card-lot-01.jpg);
-  background-position: center;
-  background-size: 170%;
 }
 
 .card_type_book {
-  position: relative;
   background-image: url(../images/card-lot-02.jpg);
-  background-position: center;
-  background-size: 120%;
 }
 
 .card_type_picture {
-  position: relative;
-  justify-content: space-between;
   background-image: url(../images/card-lot-03.jpg);
-  background-position: center;
-  background-size: 150%;
 }
 
 .lots__look-more-link {
   display: block;
-  margin: 6px 0 0 40px;
+  margin: 31px 0 0 40px;
   color: #000000;
   font-weight: 400;
   font-size: 20px;
@@ -290,10 +283,9 @@
   font-weight: 400;
   font-size: 20px;
   line-height: 120%;
-}
-
-.about__text_not_last_paragraph {
-  margin-bottom: 26px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 25px;
 }
 
 .footer {
